updated create anomalies df file, added documentation and cleaned unnecessary code.

--- a/Data_with_anomalies/create_anomalies_df.ipynb
+++ b/Data_with_anomalies/create_anomalies_df.ipynb
@@ -83,6 +83,11 @@
    "outputs": [],
    "source": [
     "def load_point_mps(point_id):\n",
+    "    \"\"\"\n",
+    "    :param point_id: id number of the requested point\n",
+    "    :return: dictionary with matrix profiles for each field, and multivariant that includes all \n",
+    "    \"\"\"\n",
+    "    \n",
     "    infile = open(f\"~/anomalies_detection/anomalies_detection/Data_and_Mps/{point_id}_mps.pkl\",'rb')\n",
     "    mps = pickle.load(infile)\n",
     "    infile.close()\n",
@@ -96,6 +101,11 @@
    "outputs": [],
    "source": [
     "def load_point_data(point_id):\n",
+    "    \"\"\"\n",
+    "    :param point_id: id number of the requested point\n",
+    "    :return: dataframe of the pre processed data of the point\n",
+    "    \"\"\"\n",
+    "    \n",
     "    infile = open(f\"{point_id}_data.pkl\",'rb')\n",
     "    df = pickle.load(infile)\n",
     "    infile.close()\n",
@@ -109,6 +119,13 @@
    "outputs": [],
    "source": [
     "def add_matrix_profile_anomalies_labels(df, mps):\n",
+    "    \"\"\"\n",
+    "    :param df: dataframe of the pre processed data of the point\n",
+    "    :param mps: dictionary with matrix profiles for each field, and multivariant that includes all \n",
+    "    :return: the given df with addition of one hot encoded columns for each var,\n",
+    "             and for the combination of all of them that indicates matrix profile anomalies.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    for col_ in ['EC', 'PH', 'ORP', 'TEMPERATURE']:\n",
     "        df[f'{col_}_mp'] = 0\n",
     "        matrix_profile = mps[f'mp_{col_}'][:, 0]\n",
@@ -134,6 +151,11 @@
    "outputs": [],
    "source": [
     "def add_isolation_forest_anomalies_labels(df):\n",
+    "    \"\"\"\n",
+    "    :param df: dataframe of the pre processed data of the point\n",
+    "    :return: the given df with addition of one hot encoded columns for each var,\n",
+    "             and for the combination of all of them that indicates Isolation forest anomalies.\n",
+    "    \"\"\"\n",
     "\n",
     "    # normalize the data\n",
     "    x = df[['EC', 'PH', 'ORP', 'TEMPERATURE']].values  #returns a numpy array\n",
@@ -180,6 +202,11 @@
    "outputs": [],
    "source": [
     "def vae_input_preprocessing(df):\n",
+    "    \"\"\"\n",
+    "    :param df: dataframe of the pre processed data of the point\n",
+    "    :return: rescaled and reshaped data compatable to use in the autoencoder model\n",
+    "    \"\"\"\n",
+    "    \n",
     "        # normalize the data\n",
     "    x = df[['EC', 'PH', 'ORP', 'TEMPERATURE']].values  #returns a numpy array\n",
     "    min_max_scaler = MinMaxScaler()\n",
@@ -196,9 +223,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define the autoencoder network model\n",
-    "\n",
     "def autoencoder_model(X):\n",
+    "    \"\"\"\n",
+    "    :param X: dataframe of the autoencoder model input\n",
+    "    :return model: autoencoder model\n",
+    "    \"\"\"\n",
+    "    \n",
     "    inputs = Input(shape=(X.shape[1], X.shape[2]))\n",
     "    L1 = LSTM(16, activation='relu', return_sequences=True, \n",
     "              kernel_regularizer=regularizers.l2(0.00))(inputs)\n",
@@ -218,6 +248,11 @@
    "outputs": [],
    "source": [
     "def add_vae_anomalies_labels(df, model):\n",
+    "    \"\"\"\n",
+    "    :param  df: dataframe of the pre processed data of the point\n",
+    "    :return df: the given df with addition of one hot encoded column that indicates Auto Incoder detected anomalies.\n",
+    "             Auto Incoder detected anomalies are the WINDOW amount of most anomulous points.\n",
+    "    \"\"\"\n",
     "\n",
     "    X_pred = model.predict(vae_input)\n",
     "    X_pred = X_pred.reshape(X_pred.shape[0], X_pred.shape[2])\n",
@@ -242,6 +277,12 @@
    "outputs": [],
    "source": [
     "def add_extended_isolation_forest_anomalies_labels(df):\n",
+    "    \"\"\"\n",
+    "    :param df: dataframe of the pre processed data of the point\n",
+    "    :return: the given df with addition of one hot encoded columns for each var,\n",
+    "             and for the combination of all of them that indicates Extended Isolation forest anomalies.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    # normalize the data\n",
     "    x = df[['EC', 'PH', 'ORP', 'TEMPERATURE']].values  #returns a numpy array\n",
     "    min_max_scaler = MinMaxScaler()\n",
@@ -287,6 +328,11 @@
    "outputs": [],
    "source": [
     "def save_df_with_anomalies(df, point_id):\n",
+    "    \"\"\"\n",
+    "    :param df: dataframe with hot encoded columns for all detected anomalies.\n",
+    "    :return: saves a pickle file af the dataframe\n",
+    "    \"\"\"\n",
+    "    \n",
     "    b_file = open(f\"{point_id}_data_with_anomalies.pkl\", \"wb\")\n",
     "    pickle.dump(df, b_file)\n",
     "    b_file.close()"
@@ -12303,7 +12349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   },
   "nbTranslate": {
    "displayLangs": [
